# competitive-programming

./: .gitignore  Cargo.toml  README.md  test_runner.py
.cargo/: config.toml
Kattis/#exclude_scoring/: excludescoring.py
Kattis/#include_scoring/: includescoring.py
Kattis/1's for all/: 1sforall.py
Kattis/1dfroggereasy/: 1dfroggereasy.py
Kattis/1dfroggerhard/: 1dfroggerhard.py
Kattis/2048/: 2048.py
Kattis/24game/: 24game.py
Kattis/3-sided-dice/: 3sideddice.py
Kattis/3019/: thirtynineteen.py
Kattis/4thought/: 4thought.py
Kattis/99_problems/: 99problems2.py
Kattis/99problems2/: 99problems2.py
Kattis/CD/: CD.py
Kattis/_ARRAYS/: segment_tree.py
Kattis/_GEOMETRY/: graham_scan.py  line_intersect.py
Kattis/_GRAPHS/: ford_fulkerson.py  lowest_common_ancestor.py  topological_sort.py
Kattis/_STRINGS/: knut_morris_pratt.py
Kattis/a_cappella_recording/: acappellarecording.py
Kattis/a_fast_walk_in_the_woods/: Cargo.toml
Kattis/a_feast_for_cats/: cats.py
Kattis/add_em_up/: addemup.py
Kattis/adolescent_architecture/: adolescentarchitecture.py
Kattis/alehouse/: main.rs
Kattis/all_pairs_shortest_path/: main.rs
Kattis/allpairsums/: allpairsums.py
Kattis/almostsorted/: almostsorted.py
Kattis/amandas_lounges/: amanda.py
Kattis/amazing_race/: race.py
Kattis/amusicalquestion/: amusicalquestion.py
Kattis/an_easy_array_problem/: aneasyarray.cpp
Kattis/aneasyarray/: Cargo.toml
Kattis/anime_shops/: animeshops.py
Kattis/arbitrage/: arbitrage.py  main.rs
Kattis/artwork/: artwork.py
Kattis/babynames/: Cargo.toml
Kattis/backpack_buddies/: backpackbuddies.py
Kattis/bag_of_tiles/: bagoftiles.cpp  main.rs
Kattis/bagoftiles/: bagoftiles.py
Kattis/basincity/: basincity.py
Kattis/baza/: baza.py  main.rs
Kattis/biokort/: biokort.py
Kattis/bohemianbookshelf/: bohemianbookshelf.py
RUST_IO/: io.rs
_ARRAYS/: fenwick_tree.py  fenwick_tree.rs  segment_tree.py  segment_tree.rs  sorted_search_tree.py
_GRAPHS/: bellman_ford.py  binary_search_tree.py  bipartite.py  dijkstra.py  edmonds_karp.py  floyd_warshall.py  kruskal.py  lowest_common_ancestor.py  minimum_spanning_tree.py  prim.py  strongly_connected_components.py  topological_sort.py
_MATH/: primes_and_factors.py  vector.py
_MATH_AND_GEMOETRY/: matrix.py  primes_and_factors.py  vec2.py  vec2.rs  vector.py
_MATH_AND_GEOMETRY/: matrix.py  vec2.py
_MISC/: directional_movement.py  directional_movement.rs  float_to_int.py  fourier_transform.py  fourier_transform.rs
_STRINGS/: knut_morris_pratt.py  longest_prefix_suffix.py  rolling_hash.py  trie.py
(+493 files in other folders)
