[workspace]
resolver = "2"

members = [
    "Kattis/listgame2", "Kattis/walkinthewoods", "Kattis/baza", "Kattis/brandpost", "Kattis/flugvallakodar", "sandbox", "Kattis/excludescoring", "Kattis/crusaders", "Kattis/doubledeck"
, "Kattis/justforsidekicks", "Kattis/paired", "Kattis/couplecompetition", "Kattis/mali", "Kattis/codforces", "Kattis/jumpingchoreography", "Kattis/profitablepizzas", "Kattis/rubiksrevenge", "Kattis/race", "Kattis/greaaat", "Kattis/24game", "Kattis/roadwork", "Kattis/golfbot", "Kattis/babynames", "Kattis/leprechaunhunt", "Kattis/maze2", "Kattis/firingthephaser", "Kattis/trains2", "Kattis/marathon2", "Kattis/pokegene", "Kattis/nekameleoni", "Kattis/broadband", "Kattis/aneasyarray", "Kattis/catchingnoodles", "Kattis/deliverydelays", "Kattis/fireexits", "Kattis/sunshine"]
