[workspace]
resolver = "2"

members = [
    "kattis/listgame2", "kattis/walkinthewoods", "kattis/baza", "kattis/brandpost", "kattis/flugvallakodar", "sandbox", "kattis/excludescoring", "kattis/crusaders", "kattis/doubledeck"
, "kattis/justforsidekicks", "kattis/paired", "kattis/couplecompetition", "kattis/mali", "kattis/codforces", "kattis/jumpingchoreography", "kattis/profitablepizzas", "kattis/rubiksrevenge", "kattis/race", "kattis/greaaat", "kattis/24game", "kattis/roadwork", "kattis/golfbot", "kattis/babynames", "kattis/leprechaunhunt", "kattis/maze2", "kattis/firingthephaser", "kattis/trains2", "kattis/marathon2", "kattis/pokegene", "kattis/nekameleoni", "kattis/broadband", "kattis/aneasyarray", "kattis/catchingnoodles", "kattis/deliverydelays", "kattis/fireexits", "kattis/sunshine", "kattis/coinflip", "kattis/domino", "kattis/rebelportals"]
